# Bandit-Playground

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.in  requirements.txt
bandit_lib/: __init__.py
bandit_lib/agents/: __init__.py  base.py  greedy_agent.py  schemas.py  ts_agent.py  ucb1_agent.py  ucb_agent.py
bandit_lib/env/: __init__.py  base.py  schemas.py  shemas.py
bandit_lib/runner/: __init__.py  train.py
bandit_lib/utils/: __init__.py  process_recorder.py  schemas.py  stats.py  viz.py
bandit_lib/utils/viz/: __init__.py  comparison.py  constants.py  history.py  utils.py
examples/: constant_step_vs_sample_mean.ipynb
