[project]
name = "bandit-lib"
version = "0.1.3"
description = "A beginner-friendly playground for multi-armed bandit algorithms with visualization."
authors = [
    {name = "Jese Ki",email = "2094901072@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uv (>=0.9.2,<0.10.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "ty (>=0.0.1a22,<0.0.2)",
    "mypy (>=1.18.2,<2.0.0)",
    "numpy (==2.2.6)",
    "plotly (>=6.3.1,<7.0.0)",
    "pip-tools (>=7.5.1,<8.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)"
]
packages = [
    { include = "bandit_lib" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
